--- a/src/main/resources/template/mapper.template
+++ b/src/main/resources/template/mapper.template
@@ -1,4 +1,4 @@
-#set(hygd.bapp.tools.mybatis.GenConfig genConfig)
+#set(com.euap.code.generator.GenConfig genConfig)
 package ${genConfig.mapperPackage};
 
 import ${genConfig.modelPackage}.${javaName};
@@ -19,58 +19,58 @@ import java.util.List;
 public interface ${javaName}Mapper {
 
     /**
-     * 插入
+     * 鎻掑叆
      */
     int insert(${javaName} record);
 
 #if(genInsertSelective)
     /**
-     * 选择插入
+     * 閫夋嫨鎻掑叆
      */
     int insertSelective(${javaName} record);
 
 #end
 #if(pkMethodParameters)
     /**
-     * 根据主键删除
+     * 鏍规嵁涓婚敭鍒犻櫎
      */
     int deleteByPrimaryKey($!{pkMethodParameters});
 
 #end
     /**
-     * 根据条件删除
+     * 鏍规嵁鏉′欢鍒犻櫎
      */
     int delete(${javaName} record);
 
     /**
-     * 根据主键更新
+     * 鏍规嵁涓婚敭鏇存柊
      */
     int updateByPrimaryKey(${javaName} record);
 
     /**
-     * 根据主键选择更新
+     * 鏍规嵁涓婚敭閫夋嫨鏇存柊
      */
     int updateByPrimaryKeySelective(${javaName} record);
 
 #if(pkMethodParameters)
     /**
-     * 根据主键查询
+     * 鏍规嵁涓婚敭鏌ヨ
      */
     ${javaName} selectByPrimaryKey($!{pkMethodParameters});
 
 #end
     /**
-     * 根据条件统计
+     * 鏍规嵁鏉′欢缁熻
      */
     int count(${javaName} record);
 
     /**
-     * 条件查询
+     * 鏉′欢鏌ヨ
      */
     List<${javaName}> select(@Param("record") ${javaName} record, @Param("order") String order);
 
     /**
-     * 分页查询
+     * 鍒嗛〉鏌ヨ
      */
     List<${javaName}> select(RowBounds rowBounds, @Param("record") ${javaName} record, @Param("order") String order);
 
